# biosets

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  setup.cfg  setup.py
.github/conda/: meta.yml
.github/workflows/: ci_cd_pipeline.yml  conda-release.yml  pypi-release.yml
docs/: CONTRIBUTING.md  DATA_LOADING.md
src/biosets/: __init__.py  __main__.py  arrow_dataset.py  config.py  data_files.py  load.py  streaming.py  types.py
src/biosets/data_handling/: __init__.py  base.py  data_handling.py
src/biosets/data_handling/arrow/: __init__.py  arrow.py
src/biosets/data_handling/csr/: __init__.py  csr.py
src/biosets/data_handling/dask/: __init__.py  dask.py
src/biosets/data_handling/dataset/: __init__.py  dataset.py
src/biosets/data_handling/dict/: __init__.py  dict.py
src/biosets/data_handling/dicts/: __init__.py  dicts.py
src/biosets/data_handling/io/: __init__.py  io.py
src/biosets/data_handling/iterabledataset/: __init__.py  iterabledataset.py
src/biosets/download/: __init__.py  schema_manager.py
src/biosets/features/: __init__.py  metadata.py  omics.py  targets.py
src/biosets/integration/: __init__.py  patcher.py
src/biosets/packaged_modules/: __init__.py
src/biosets/utils/: __init__.py  doc.py  file_utils.py  fingerprint.py  generic.py  gorilla.py  import_util.py  inspect.py  logging.py  py_util.py  table_util.py
tests/: conftest.py  test_load.py  test_patcher.py
tests/converter/: test_converters.py
tests/fixtures/: files.py
tests/packaged_modules/: test_biodata.py  test_csv.py  test_sparse_reader.py
(+26 files in other folders)
