[metadata]
license_files = LICENSE

[tool:ruff]
line-length = 88
select = ["E", "F", "W", "C90"]
ignore = ["E501"]
exclude = ["*.ipynb"]

[tool:pytest]
# Test fails if a FutureWarning is thrown by `huggingface_hub`
filterwarnings =
    error::FutureWarning:huggingface_hub*
markers =
    unit: unit test
    integration: integration test
